# pysxm

./: .travis.yml  LICENSE  README.rst  pyproject.toml  pysxm.py  setup.py  tox.ini
.github/workflows/: python-app.yml
pysxdb/: __init__.py
pysxm/: __init__.py  ext.py  pysxm.py
tests/: test_pysxdb.py  test_pysxm.py
