[tool.poetry]
name = "pysxm"
version = "1.5.0"
description = "Simple and extensible xml python marshaller"
authors = ["Josue Kouka <josuebrunel@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
